--- a/style.css
+++ b/style.css
@@ -6,14 +6,31 @@
 
 /*Layout*/
 
+body {
+    background: #eeeeee;
+}
+
 header {
     background: #dddddd;
+    padding: 30px 0 30px 0;
 }
 
 main {
-
+    .container {
+        background: #ffffff;
+        padding: 5px;
+    }
 }
 
 footer {
     background: #dddddd;
+    padding: 30px 0 30px 0;
+    text-align: center;
+
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto 0 auto; /*top right bottom left*/
+    /*background: yellow;*/
 }
